--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,63 +54,46 @@ body {
 /* Colour Configuration */
 
 body {
-    background-color: #262425;
-    color: #cccccc;
+    background-color: #3E3E3E;
+    color: #f0e9dc;
 }
 
 body a, body a:visited {
-    color: #262425;
-}
-
-body a:hover {
-   color: #cccccc;
-}
-
-.card h3 {
-   color: #1e1a1b;
+    color: #032C36;
 }
 
 .card ul {
-    background-color: #cccccc;;
-    color: #c0c0c0;
+    background-color: #f0e9dc;
 }
 
 #email h3 {
-    background-color: #9e7e8b;
+    background-color: #C2454E;
+}
+
+#email a:hover {
+   color: #C2454E;
 }
 
 #social h3 {
-    background-color: #d6c9a1;
+    background-color: #BEB090;
+}
+
+#social a:hover {
+   color: #BEB090;
 }
 
 #dcu h3 {
-    background-color: #a4afce;
+    background-color: #7BBAC7;
+}
+
+#dcu a:hover {
+   color: #7BBAC7;
 }
 
 #general h3 {
-    background-color: #8caa94;
+    background-color: #7CBF9E;
 }
 
-
-colour_palette {
-    /* http://www.xcolors.net/dl/chalk */
-    foreground:   #cccccc;
-    background:   #262425;
-    cursorColor:  #cccccc;
-    color0:       #1e1a1b;
-    color8:       #403a3d;
-    color1:       #9e7e8b;
-    color9:       #da5189;
-    color2:       #8caa94;
-    color10:      #66e487;
-    color3:       #d6c9a1;
-    color11:      #debe5c;
-    color4:       #9dbdc9;
-    color12:      #71c2e0;
-    color5:       #c99cc5;
-    color13:      #e871dd;
-    color6:       #a4afce;
-    color14:      #607fd9;
-    color7:       #c0c0c0;
-    color15:      #ffffff;
+#general a:hover {
+   color: #7CBF9E;
 }
